<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:background="@drawable/fondo1"
    android:padding="16dp">

    <!-- Un único contenedor para evitar Unnecessary parent layout -->
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:padding="16dp"
        android:layout_marginHorizontal="16dp">

        <TextView
            android:id="@+id/lblTitulo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/titulo_login"
            android:textStyle="bold"
            android:textSize="20sp"
            android:textColor="#212121"
            android:gravity="center"
            android:layout_marginBottom="12dp" />

        <!-- Usuario -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/usuario_label"
            android:textColor="#212121"
            android:layout_marginTop="4dp" />

        <EditText
            android:id="@+id/txtUser"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/usuario_hint"
            android:inputType="text"
            android:autofillHints="username"
            android:minHeight="48dp"
            android:padding="12dp"
            android:textColor="#212121"
            android:layout_marginTop="4dp" />

        <!-- Contraseña -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/contrasena_label"
            android:textColor="#212121"
            android:layout_marginTop="8dp" />

        <EditText
            android:id="@+id/txtPass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/contrasena_hint"
            android:inputType="textPassword"
            android:autofillHints="password"
            android:minHeight="48dp"
            android:padding="12dp"
            android:textColor="#212121"
            android:layout_marginTop="4dp" />

        <Button
            android:id="@+id/btnLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_entrar"
            android:minHeight="48dp"
            android:layout_marginTop="12dp" />
    </LinearLayout>
</ScrollView>
